[project]
name = "comfyui-textoverlay"
description = "A custom node for ComfyUI that adds text overlay to images, with options for text and background color, opacity, vertical positioning, and custom font selection."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/neeltheninja/ComfyUI-TextOverlay"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "neeltheninja"
DisplayName = "ComfyUI-TextOverlayBasic"
Icon = ""
